--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="#">DOWNLOAD CV</a>
             </div>
             <div class="container">
-                <img src="imgs/background.jpg" class="background">
+                <img src="images/imgs/background.jpg" class="background">
                 
 
             </div>
